# knowledge-metrics-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  openapi.json  pyproject.toml
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/routes/: __init__.py  metrics.py  queries.py
app/core/: __init__.py  config.py  exceptions.py  logging.py
app/middleware/: __init__.py  logging.py  request_id.py
app/models/: __init__.py  base.py  metrics.py  query.py  vendor.py
app/services/: __init__.py  data_loader.py  metrics_service.py  query_service.py
data/: vendor_metrics.csv
scripts/: run_tests.py  test_metrics.py  test_queries.py
tests/api/v1/: test_metrics_api.py  test_queries_api.py
tests/services/: test_data_loader.py  test_metrics_service.py  test_query_service.py
