[project]
name = "knowledge-metrics-service"
version = "0.1.0"
description = "FastAPI service for vendor metrics and natural language queries"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "pandas>=2.2.0",
  "numpy>=2.1.0",
  "httpx>=0.28.0",
  "openai>=1.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
